--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "mongoose": "^5.5.15",
+    "nodemon": "^1.19.1",
     "pug": "^2.0.3"
   }
 }
