--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AdFrench14/comp2068-project#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
